--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,12 +49,10 @@ dependencies {
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0"
     implementation 'org.jsoup:jsoup:1.10.3'
-//ViewModelLifeCycle
-
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation "androidx.activity:activity-ktx:$activity_version"
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
-
+    implementation "androidx.biometric:biometric:1.0.1"
 }
